--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   "homepage": "https://github.com/Hirama/tokenizer-net#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "eth-lightwallet": "^2.5.6",
+    "ethereumjs-tx": "^1.3.1",
+    "ethereumjs-util": "^5.1.2",
     "express": "^4.15.3",
+    "file-system": "^2.2.2",
+    "solc": "^0.4.11",
     "zeppelin-solidity": "^1.0.7"
   },
   "devDependencies": {
